# infrahub-erd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
examples/: demo-schema.graphql
src/: dedup.rs  dot.rs  error.rs  filter.rs  main.rs  mermaid.rs  parse.rs
